<resources>
  <string name="app_name">Hillfort</string>

  <!-- Menus -->
  <string name="menu_deleteHillfort">Delete</string>
  <string name="menu_cancelHillfort">Cancel</string>
  <string name="menu_createHillfort">Create</string>
  <string name="menu_saveHillfort">Save</string>
  <string name="menu_logo">Hillfort</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_logout">Log out</string>
  <string name="menu_profile">Profile</string>

  <!-- Hillfort page -->
  <string name="text_dateVisited">Date visited:</string>
  <string name="text_chooseDate">Choose date</string>
  <string name="text_chooseImages">Choose images</string>
  <string name="text_chooseLocation">Choose location</string>
  <string name="text_addImage">Add Image...</string>
  <string name="text_notes">Additional notes</string>
  <string name="error_invalidTitle">Please enter a valid title</string>

  <string name="title">Delete Hillfort</string>
  <string name="message">Do you really want to delete this hillfort?</string>
  <string name="ok">Delete</string>
  <string name="cancel">Cancel</string>

  <string name="button_saveHillfort">Save Hillfort</string>
  <string name="button_createHillfort">Add Hillfort</string>
  <string name="button_addImage">Add Image</string>
  <string name="button_changeImage">Change Image</string>
  <string name="button_location">Set Location</string>
  <string name="select_image">Select Image</string>

  <!-- Map activity -->
  <string name="title_activity_maps">Map</string>

  <!-- Splash Screen -->
  <string name="loader_text">Hillfort</string>

  <!-- Landing Screen -->
  <string name="button_signup">Sign up</string>
  <string name="button_login">Log in</string>

  <!-- Sign up page -->
  <string name="error_invalidSignup">Invalid user credentials</string>
  <string name="error_userExists">Email address is already in use</string>
  <string name="error_invalidEmail">This email address is invalid</string>
  <string name="error_invalidPassword">This password is too short</string>
  <string name="error_invalidName">Name cannot be empty</string>

  <!-- Log in page -->
  <string name="text_authFailed">Email or password is incorrect</string>

  <!-- Settings page -->
  <string name="text_chooseIcon">Change..</string>
  <string name="title_settings">Update credentials</string>
  <string name="button_saveSettings">Save</string>
  <string name="error_userEmail">Invalid email</string>
  <string name="error_userPassword">Invalid password</string>
  <string name="text_userSaved">Settings saved</string>

  <!-- Profile page -->
  <string name="title_profile">Profile statistics</string>
  <string name="title_activity_main">MainActivity</string>

  <!-- Navigation drawer -->
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Hillfort</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
</resources>

