<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="org.wit.hillfort.activities.HillfortActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="centerCrop"
      android:src="@drawable/background" />

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <ImageView
          android:id="@+id/logo"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_gravity="center"
          android:layout_marginBottom="5dp"
          android:src="@drawable/hillfort_logo" />

        <TextView
          android:id="@+id/textTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="50dp"
          android:shadowColor="#000"
          android:shadowRadius="10"
          android:text="@string/app_name"
          android:textAlignment="center"
          android:textColor="#fff"
          android:textSize="36sp"
          android:textStyle="bold" />

        <Button
          android:id="@+id/btnSignup"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="4dp"
          android:layout_marginHorizontal="16dp"
          android:background="#000"
          android:stateListAnimator="@null"
          android:text="@string/button_signup"
          android:textColor="#fff"
          android:textSize="16sp"
          android:textStyle="bold" />

        <Button
          android:id="@+id/btnLogin"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="16dp"
          android:background="@android:color/transparent"
          android:shadowColor="#000"
          android:shadowRadius="5"
          android:stateListAnimator="@null"
          android:text="@string/button_login"
          android:textColor="#fff"
          android:textSize="16sp"
          android:textStyle="bold" />

      </LinearLayout>

    </ScrollView>

  </RelativeLayout>

</android.support.constraint.ConstraintLayout>