<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="org.wit.hillfort.activities.HillfortActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorAccent"
      android:fitsSystemWindows="true"
      app:elevation="0dip"
      app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/colorPrimary" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/appBarLayout"
      android:fillViewport="true">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Slider -->
        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="#000" />

          <TextView
            android:id="@+id/textAddImage"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:gravity="center_vertical"
            android:text="@string/text_addImage"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp" />
        </RelativeLayout>

        <!-- Hillfort details -->
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="30dp">

          <android.support.design.widget.TextInputEditText
            android:id="@+id/hillfortName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Hillfort Name"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

          <android.support.design.widget.TextInputEditText
            android:id="@+id/hillfortDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="Description"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

          <TextView
            android:id="@+id/hillfortTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:text="Details"
            android:textSize="25dp" />

          <!-- Choose date -->
          <RelativeLayout
            android:id="@+id/chooseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <ImageView
              android:id="@+id/dateIcon"
              android:layout_width="25dp"
              android:layout_height="25dp"
              android:src="@drawable/calendar" />

            <TextView
              android:id="@+id/dateVisited"
              android:layout_width="wrap_content"
              android:layout_height="25dp"
              android:layout_toRightOf="@+id/dateIcon"
              android:paddingLeft="5dp"
              android:text="@string/text_chooseDate"
              android:textSize="16sp" />

          </RelativeLayout>

          <!-- Choose images -->
          <RelativeLayout
            android:id="@+id/chooseImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
              android:id="@+id/imageIcon"
              android:layout_width="25dp"
              android:layout_height="25dp"
              android:src="@drawable/photo" />

            <TextView
              android:id="@+id/image"
              android:layout_width="wrap_content"
              android:layout_height="25dp"
              android:layout_toRightOf="@+id/imageIcon"
              android:paddingLeft="5dp"
              android:text="@string/text_chooseImages"
              android:textSize="16sp" />

          </RelativeLayout>

          <!-- Choose location -->
          <RelativeLayout
            android:id="@+id/chooseLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
              android:id="@+id/locationIcon"
              android:layout_width="25dp"
              android:layout_height="25dp"
              android:src="@drawable/location" />

            <TextView
              android:id="@+id/location"
              android:layout_width="wrap_content"
              android:layout_height="25dp"
              android:layout_toRightOf="@+id/locationIcon"
              android:paddingLeft="5dp"
              android:text="@string/text_chooseLocation"
              android:textSize="16sp" />

          </RelativeLayout>

          <CheckBox
            android:id="@+id/hillfortVisited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginTop="2dp"
            android:text="Visited"
            android:textSize="16sp" />

          <EditText
            android:id="@+id/hillfortNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/text_notes"
            android:inputType="textMultiLine" />

          <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorAccent"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:stateListAnimator="@null"
            android:text="@string/button_createHillfort"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        </LinearLayout>

      </LinearLayout>

    </ScrollView>

  </RelativeLayout>
</android.support.constraint.ConstraintLayout>